Writting documentation for US105

--- a/docs/1201765.md
+++ b/docs/1201765.md
@@ -1,4 +1,4 @@
-1201780.md** Ricardo Nogueira [1201780](./)** 
+** João Luís Duarte Pinto [1201765](./)** 
 ===============================
 
 
@@ -7,7 +7,7 @@
 
 | Sprint | Functionality     |
 |--------|--------------------|
-| **1**  | [USDemo1](USDemo1) |
+| **1**  | [US105](USDemo1) |
 | **B**  | [USDemo2](USDemo2) |
 | **C**  | [USDemo3](USDemo3) |
 | **C**  | [USDemo3](USDemo4) |
