Updated Planeamento.md with the group work info. Started Glossary.md

--- a/docs/1201780.md
+++ b/docs/1201780.md
@@ -7,7 +7,7 @@
 
 | Sprint | Functionality     |
 |--------|--------------------|
-| **1**  | [USDemo1](USDemo1) |
+| **1**  | [US151 AddEmail](docs/US151 AddEmail.md) |
 | **B**  | [USDemo2](USDemo2) |
 | **C**  | [USDemo3](USDemo3) |
 | **C**  | [USDemo3](USDemo4) |
