--- a/docs/1201780.md
+++ b/docs/1201780.md
@@ -7,8 +7,8 @@
 
 | Sprint | Functionality     |
 |--------|--------------------|
-| **1**  | [US151](USDemo1) |
-| **B**  | [USDemo2](USDemo2) |
+| **1**  | [US151](/docs/US151_AddEmail.md/) |
+| **1**  | [US110](/docs/US110_GetCategoryTree.md) |
 | **C**  | [USDemo3](USDemo3) |
 | **C**  | [USDemo3](USDemo4) |
 | **D**  | [USDemo3](USDemo5) |
