--- a/docs/students/1201762.md
+++ b/docs/students/1201762.md
@@ -7,5 +7,5 @@
 
 | Sprint | Functionality     |
 |--------|--------------------|
-| **1**  | [US001 - Create Standard Category](US001_CreateStandardCategory.md) |
-| **1**  | [US010 - Add a Family](US010_AddFamily.md) |
+| **1**  | [US001 - Create Standard Category](../user_stories/US001_CreateStandardCategory.md) |
+| **1**  | [US010 - Add a Family](../user_stories/US010_AddFamily.md) |
