update CategoryService and Us002 docs

--- a/docs/1181945.md
+++ b/docs/1181945.md
@@ -7,10 +7,4 @@
 
 | Sprint | Functionality     |
 |--------|--------------------|
-| **1**  | [US002](USDemo1) |
-| **B**  | [USDemo2](USDemo2) |
-| **C**  | [USDemo3](USDemo3) |
-| **C**  | [USDemo3](USDemo4) |
-| **D**  | [USDemo3](USDemo5) |
-| **D**  | [USDemo3](USDemo6) |
-| **D**  | [USDemo3](USDemo7) |
+| **1**  | [US002 - Get the standard categories tree](US002_GetStandardCategories.md) |
