add final changes to 5 and 6

--- a/docs/students/1201768.md
+++ b/docs/students/1201768.md
@@ -5,8 +5,8 @@
 
 | Sprint | Functionality     |
 |--------|--------------------|
-| **1**  | [US101](/docs/user_stories/US101_AddFamilyMembers.md) |
-| **1**  | [US011](/docs/user_stories/US011_AddFamilyAdministrator.md) |
+| **1**  | [US101 - Add Family Member](../sprint1/user_stories/US101_AddFamilyMembers.md) |
+| **1**  | [US011 - Add Family Administrator](../sprint1/user_stories/US011_AddFamilyAdministrator.md) |
 | **C**  | [USDemo3](USDemo3) |
 | **C**  | [USDemo3](USDemo4) |
 | **D**  | [USDemo3](USDemo5) |
