Updating tests and redundant methods

--- a/docs/students/1201762.md
+++ b/docs/students/1201762.md
@@ -9,3 +9,5 @@
 |--------|--------------------|
 | **1**  | [US001 - Create Standard Category](../sprint1/user_stories/US001_CreateStandardCategory.md) |
 | **1**  | [US010 - Add a Family](../sprint1/user_stories/US010_AddFamily.md) |
+| **2**  | [US170 - Create Personal Cash Account](../sprint2/user_stories/US170_CreatePersonalCashAccount.md) | 
+| **2**  | [US130 - Transfer Money From Family Cash Account To Family Member Cash Account](../sprint2/user_stories/US130_TransferFromFamilyCashAccountToMemberCashAccount.md) |
