Changed Email verification to create an updated list of all app emails on each verification. Started on US106 documentation

--- a/docs/students/1201780.md
+++ b/docs/students/1201780.md
@@ -7,10 +7,10 @@
 
 | Sprint | Functionality     |
 |--------|--------------------|
-| **1**  | [US151](/docs/sprint1/user_stories/US151_AddEmail.md/) |
-| **1**  | [US110](/docs/sprint1/user_stories/US110_GetCategoryTree.md) |
-| **2**  | [US111](USDemo3) |
-| **C**  | [USDemo3](USDemo4) |
-| **D**  | [USDemo3](USDemo5) |
+| **1**  | [US151](../docs/sprint1/user_stories/US151_AddEmail.md/) |
+| **1**  | [US110](../docs/sprint1/user_stories/US110_GetCategoryTree.md) |
+| **2**  | [US111](../docs/sprint2/user_stories/US111_AddCategoryToFamilyTree.md) |
+| **2**  | [US106](../docs/sprint2/user_stories/US106_ChangeRelation.md) |
+| **2**  | [US170](../docs/sprint2/user_stories/US170_CreatePersonalCashAccount.md) |
 | **D**  | [USDemo3](USDemo6) |
 | **D**  | [USDemo3](USDemo7) |
