update in Cash Tansfer DTO

--- a/docs/students/1181945.md
+++ b/docs/students/1181945.md
@@ -8,3 +8,5 @@
 | Sprint | Functionality     |
 |--------|--------------------|
 | **1**  | [US002 - Get the standard categories tree](US002_GetStandardCategories.md) |
+| **2**  | [US173 - Add a credit card account](US173_AddCreditCardAccount.md)
+| **2**  | [US180 - Transfer money from one family member to other family member](US180_TransferMoneyFamilyMemberToFamilyMember.md) |
