add test to transactionService

--- a/docs/students/1201768.md
+++ b/docs/students/1201768.md
@@ -7,8 +7,8 @@
 |--------|--------------------|
 | **1**  | [US101 - Add Family Member](../sprint1/user_stories/US101_AddFamilyMembers.md) |
 | **1**  | [US011 - Add Family Administrator](../sprint1/user_stories/US011_AddFamilyAdministrator.md) |
-| **C**  | [USDemo3](USDemo3) |
-| **C**  | [USDemo3](USDemo4) |
+| **2**  | [US171 - Add Bank Account]( ../docs/sprint2/user_stories/US171_AddBankAccount.md) |
+| **2**  | [US181 - Register Payment in My CashAccount]( ../docs/sprint2/user_stories/US181_RegisterPaymentMyCashAccount.md) |
 | **D**  | [USDemo3](USDemo5) |
 | **D**  | [USDemo3](USDemo6) |
 | **D**  | [USDemo3](USDemo7) |
