changes to us135 docs and updated 1201765.md and planing.md

--- a/docs/students/1201765.md
+++ b/docs/students/1201765.md
@@ -9,3 +9,5 @@
 |--------|--------------------|
 | **1**  | [US105 - Add Relation](../sprint1/user_stories/US105_AddRelation.md) |
 | **1**  | [US011 - Add Family Administrator](../sprint1/user_stories/US011_AddFamilyAdministrator.md) |
+| **2**  | [US135 - Check Family Or Family Member Cash Account Balance](../sprint2/user_stories/US135_CheckFamilyOrFamilyMemberCashAccountBalance.md) |
+| **2**  | [US173 - Add Credit Card Account](../sprint2/user_stories/US173_AddCreditCardAccount.md) |
