create sd for account creation user stories

--- a/docs/sprint5/user_stories/US170,171,172,173.md
+++ b/docs/sprint5/user_stories/US170,171,172,173.md
@@ -1,3 +1,138 @@
+## 3.4. Sequence Diagram
+
+```puml
+autonumber 1
+title Create Account
+
+participant ": IAccountRESTController" as controller
+participant ": ICreateAccountService" as service
+participant ": IAccountRepository" as repository
+participant ": IAccountRepositoryJPA" as repositoryJPA
+
+
+-> controller : createAccount(createAccountDTO)
+activate controller
+
+ref over controller
+CreateAccountDTO to InputAccountDTO
+
+inputAccountDTO = accountInputDTOAssembler.toInputDTO(createAccountDTO)
+end
+
+controller -> service : createAccount(inputAccountDTO)
+activate service
+
+ref over service
+InputAccountDTO to Account
+
+account = accountDTODomainAssembler.toDomain(inputAccountDTO)
+end
+
+service -> repository : add(account)
+activate repository
+
+ref over repository
+Account to AccountJPA
+
+accountJPA = accountDataDomainAssembler.toData(account)
+end
+
+repository -> repositoryJPA : save(accountJPA)
+activate repositoryJPA
+return savedAccountJPA
+
+ref over repository
+AccountJPA to Account
+
+savedAccount = accountDataDomainAssembler.toDomain(savedAccountJPA)
+end
+
+return savedAccount
+
+ref over service
+Account to OutputAccountDTO
+
+outputAccountDTO = accountDTODomainAssembler.toDTO(savedAccount)
+end
+
+return outputAccountDTO
+
+ref over controller
+Add Links to OutputAccountDTO
+end
+
+return responseEntity
+
+```
+
+```puml
+autonumber
+title InputAccountDTO to Account
+
+participant ": AccountDTODomainAssembler" as assembler
+participant ": OwnerID" as owner
+participant ": Balance" as balance
+participant ": Description" as description
+participant ": AccountType" as type
+
+-> assembler : toDomain(inputAccountDTO)
+activate assembler
+
+assembler -> owner ** : create(inputAccountDTO.unpackOwnerID())
+
+assembler -> balance ** : create(inputAccountDTO.unpackBalance())
+
+assembler -> description ** : create(inputAccountDTO.unpackDescription())
+
+assembler -> type : valueOf(inputAccountDTO.unpackAccountType())
+activate type
+return accountType
+
+ref over assembler
+Account Factory
+
+account = accountFactory.getAccout(ownerID, balance, description, accountType)
+end
+
+return account
+
+```
+
+```puml
+autonumber
+title Account Factory
+
+participant ": AccountFactory" as factory
+participant "cashAccount : Account" as cashAccount
+participant "bankAccount : Account" as bankAccount
+participant "bankSavingsAccount : Account" as bankSavingsAccount
+participant "creditCardAccount : Account" as creditCardAccount
+
+-> factory : getAccount(ownerID, balance, description, accountType)
+activate factory
+
+alt if(accountType = "CASH_ACCOUNT")
+factory -> cashAccount ** : create(ownerID, balance, description)
+
+else if(accountType = "BANK_ACCOUNT")
+factory -> bankAccount ** : create(ownerID, balance, description)
+
+else if(accountType = "BANK_SAVINGS_ACCOUNT")
+factory -> bankSavingsAccount ** : create(ownerID, balance, description)
+
+else if(accountType = "CREDIT_CARD_ACCOUNT")
+factory -> creditCardAccount ** : create(ownerID, balance, description)
+
+end
+
+return account
+
+
+
+```
+
+
+
 ## 3.4 Tests
 
 ### Controller Tests
