added SDs for refs in accounts

--- a/docs/sprint5/user_stories/US170,171,172,173.md
+++ b/docs/sprint5/user_stories/US170,171,172,173.md
@@ -1,3 +1,54 @@
+# US101 Add Family Members
+=======================================
+
+# 1. Requirements
+
+## 1.1 Client Notes
+
+
+## 1.2 Dependencies
+
+### 1.2.1 Pre-conditions
+
+### 1.2.2 Other User Stories
+
+## 1.3 Acceptance Criteria
+
+### 1.3.1 Success Cases
+
+### 1.3.2 Failure Cases
+
+## 1.4 SSD
+
+# 2. Analysis
+
+## 2.1 Summary
+
+### Information Needed
+
+| **_Name_**         | **_Business Rules_**                                                                   |
+| :-------------------------- | :------------------------------------------------------------------------------------- |
+| **Description**                | Required, string            |
+| **Balance**                    | Required, Integer
+|**Currency**  | Optional, must be given in ISO 4217 currency code, if absent euro (EURO) is default |
+| **OwnerID**               | Required, alfanumeric                                                        |
+
+
+## 2.2. Domain Model Excerpt
+
+
+# 3. Design
+
+## 3.1. Design decisions
+
+
+
+## 3.2. Class Diagram
+
+
+## 3.3. Functionality Use
+
+
 ## 3.4. Sequence Diagram
 
 ```puml
@@ -89,7 +140,7 @@ activate type
 return accountType
 
 ref over assembler
-Account Factory
+Account Factory 1.
 
 account = accountFactory.getAccout(ownerID, balance, description, accountType)
 end
@@ -100,7 +151,7 @@ return account
 
 ```puml
 autonumber
-title Account Factory
+title Account Factory 1.
 
 participant ": AccountFactory" as factory
 participant "cashAccount : Account" as cashAccount
@@ -131,9 +182,75 @@ return account
 
 ```
 
+```puml
+autonumber
+title AccountJPA to Account
+
+participant ": AccountDataDomainAssembler" as assembler
+participant "accountID : AccountID" as id
+participant "ownerID : OwnerID" as owner
+participant "balance : Balance" as balance
+participant "description : Description" as description
+participant "accountType: AccountType" as type
+
+-> assembler : toDomain(accountJPA)
+activate assembler
+
+assembler -> id** : create(accountJPA.getId()) 
+
+assembler -> owner ** : create(accountJPA.getOwner())
+
+assembler -> balance ** : create(accountJPA.getBalance())
+
+assembler -> description ** : create(accountJPA.getDescription)
+
+assembler -> type : valueOf(accountJPA.accountType)
+activate type
+return accountType
+
+ref over assembler
+Account Factory 2.
+
+account = accountFactory.getAccout(ownerID, balance, description, accountType, accountID)
+end
+
+return account
+
+```
+
+```puml
+autonumber
+title Account Factory 2.
+
+participant ": AccountFactory" as factory
+participant "cashAccount : Account" as cashAccount
+participant "bankAccount : Account" as bankAccount
+participant "bankSavingsAccount : Account" as bankSavingsAccount
+participant "creditCardAccount : Account" as creditCardAccount
+
+-> factory : getAccount(ownerID, balance, description, accountType, accountID)
+activate factory
+
+alt if(accountType = "CASH_ACCOUNT")
+factory -> cashAccount ** : create(ownerID, balance, description, accountID)
+
+else if(accountType = "BANK_ACCOUNT")
+factory -> bankAccount ** : create(ownerID, balance, description, accountID)
+
+else if(accountType = "BANK_SAVINGS_ACCOUNT")
+factory -> bankSavingsAccount ** : create(ownerID, balance, description, accountID)
+
+else if(accountType = "CREDIT_CARD_ACCOUNT")
+factory -> creditCardAccount ** : create(ownerID, balance, description, accountID)
+
+end
+
+return account
+
+```
 
 
-## 3.4 Tests
+## 3.5 Tests
 
 ### Controller Tests
 
