add design decisions section to account creation user stories

--- a/docs/sprint5/user_stories/US170,171,172,173.md
+++ b/docs/sprint5/user_stories/US170,171,172,173.md
@@ -41,6 +41,37 @@
 
 ## 3.1. Design decisions
 
+All accounts will be created using a single entry DTO. This DTO will have an attribute that specifies the type of account to be created. This way, we have a single entry point for all methods regarding account creation. 
+
+In our service, a DTO to Domain assembler will be used to process received data and create the desired account type. This assembler will use the AccountFactory class, that will abstract the logic behind account creation. 
+
+```
+Account account = accountFactory.getAccount(ownerID, balance, description, accountType)
+```
+
+Account type is a string in the DTO that will be used to create an AccountType object. This is an Enum class that will be instantiated using a valueOf() method:
+
+```
+AccountType accountType = AccountType.valueOf(String <desired account type>);
+```
+
+Account types must be hard-coded. As of this moment, we have Cash Accounts, Bank Accounts, Bank Savings Accounts and Credit Card Accounts. In API documentation, this parameter must be specified according to this class.
+
+In the AccountFactory class, the constructor will decide which account class to create depending on the AccountType object it receives. Example:
+
+```
+Account account;
+
+// if AccountType = "CASH_ACCOUNT", then
+
+account = new CashAccount(ownerID, balance, description)
+
+...
+```
+
+AccountID generation will be handled by the database. Upon account first time creation, no ID will be used. When saved in the repository, a savedAccount object will be returned that has a generated AccountID value. Subsequent account creation will use this AccountID. This AccountID can also be used in the ResponseEntity of the request as a self link.
+
+To handle this, AccountFactory will have two methods with the same name but different signature, one with and one without AccountID.
 
 
 ## 3.2. Class Diagram
