add links to documentation

--- a/docs/sprint5/user_stories/US170,171,172,173.md
+++ b/docs/sprint5/user_stories/US170,171,172,173.md
@@ -74,6 +74,13 @@ AccountID generation will be handled by the database. Upon account first time cr
 To handle this, AccountFactory will have two methods with the same name but different signature, one with and one without AccountID.
 
 
+FALTA FALAR DE BUILDER PARA ACCOUNT E MONETARY / CURRENCY
+https://en.wikipedia.org/wiki/ISO_4217
+https://www.geeksforgeeks.org/java-util-currency-methods-example/
+https://www.baeldung.com/java-string-to-enum
+https://www.tutorialspoint.com/design_pattern/factory_pattern.htm
+
+
 ## 3.2. Class Diagram
 
 
