--- a/docs/sprint5/user_stories/US170,171,172,173.md
+++ b/docs/sprint5/user_stories/US170,171,172,173.md
@@ -49,7 +49,8 @@ In our service, a DTO to Domain assembler will be used to process received data 
 Account account = accountFactory.getAccount(ownerID, balance, description, accountType)
 ```
 
-Account type is a string in the DTO that will be used to create an AccountType object. This is an Enum class that will be instantiated using a valueOf() method:
+Account type is a string in the DTO that will be used to create an AccountType object. [This is an Enum class that will be instantiated using a valueOf() method:](https://www.baeldung.com/java-string-to-enum
+)
 
 ```
 AccountType accountType = AccountType.valueOf(String <desired account type>);
@@ -57,14 +58,15 @@ AccountType accountType = AccountType.valueOf(String <desired account type>);
 
 Account types must be hard-coded. As of this moment, we have Cash Accounts, Bank Accounts, Bank Savings Accounts and Credit Card Accounts. In API documentation, this parameter must be specified according to this class.
 
-In the AccountFactory class, the constructor will decide which account class to create depending on the AccountType object it receives. Example:
+In the AccountFactory class, the constructor will decide which account class to create depending on the AccountType object it receives. [Example:](https://www.tutorialspoint.com/design_pattern/factory_pattern.htm
+)
 
 ```
 Account account;
 
 // if AccountType = "CASH_ACCOUNT", then
 
-account = new CashAccount(ownerID, balance, description)
+Account account = new CashAccount.Builder(ownerID, balance, description).build();
 
 ...
 ```
@@ -73,13 +75,23 @@ AccountID generation will be handled by the database. Upon account first time cr
 
 To handle this, AccountFactory will have two methods with the same name but different signature, one with and one without AccountID.
 
+The classes that implement the Account interface will have a builder inner class to instantiate objects. The required data for an Account object are OwnerID, Balance and Description. The builder will allow a withAccountID() method to be used as well:
 
-FALTA FALAR DE BUILDER PARA ACCOUNT E MONETARY / CURRENCY
-https://en.wikipedia.org/wiki/ISO_4217
-https://www.geeksforgeeks.org/java-util-currency-methods-example/
-https://www.baeldung.com/java-string-to-enum
-https://www.tutorialspoint.com/design_pattern/factory_pattern.htm
+```
+// first time account creation with exterior data
+Account account = new CashAccount.Builder(ownerID, balance, description).build();
 
+// account data from persistence
+Account account = new CashAccount.Builder(ownerID, balance, description).withAccountID(accountID).build();
+```
+
+Each class that implements Account should have a builder of its own. This will result in some repeated code, where the only change is the return of the build() method. 
+
+Another option could be used (mais elegante, mas talvez desnecessário) to avoid this duplication, a [skeletal interface](https://dzone.com/articles/favour-skeletal-interface-in-java).
+
+In this version, the inner class would extend an abstract class that implements account. This abstract class would contain necessary code except for the build() method, different for every class. With this we could also avoid using an AccountData class.
+
+Regarding handling money in our application, a class that has as attributes monetary value and the associated currency is necessary. For currency we can use the java util class [Currency](https://www.geeksforgeeks.org/java-util-currency-methods-example/). This class allows an instance of currency to be created using a [ISO 4217 currency code](https://en.wikipedia.org/wiki/ISO_4217). The monetary value could be a BigDecimal (recommended) or other options that allow floats.
 
 ## 3.2. Class Diagram
 
