--- a/docs/sprint5/user_stories/US170,171,172,173.md
+++ b/docs/sprint5/user_stories/US170,171,172,173.md
@@ -43,6 +43,8 @@
 
 All accounts will be created using a single entry DTO. This DTO will have an attribute that specifies the type of account to be created. This way, we have a single entry point for all methods regarding account creation. 
 
+At another point, with more information and user stories regarding accounts, some changes could be made. Another request can come from the client with additional information, for example.
+
 In our service, a DTO to Domain assembler will be used to process received data and create the desired account type. This assembler will use the AccountFactory class, that will abstract the logic behind account creation. 
 
 ```
@@ -92,6 +94,8 @@ Another option could be used (mais elegante, mas talvez desnecessário) to avoid
 In this version, the inner class would extend an abstract class that implements account. This abstract class would contain necessary code except for the build() method, different for every class. With this we could also avoid using an AccountData class.
 
 Regarding handling money in our application, a class that has as attributes monetary value and the associated currency is necessary. For currency we can use the java util class [Currency](https://www.geeksforgeeks.org/java-util-currency-methods-example/). This class allows an instance of currency to be created using a [ISO 4217 currency code](https://en.wikipedia.org/wiki/ISO_4217). The monetary value could be a BigDecimal (recommended) or other options that allow floats.
+
+
 
 ## 3.2. Class Diagram
 
