additions to accounts in documentation regarding movements

--- a/docs/sprint5/user_stories/US170,171,172,173.md
+++ b/docs/sprint5/user_stories/US170,171,172,173.md
@@ -29,9 +29,9 @@
 | **_Name_**         | **_Business Rules_**                                                                   |
 | :-------------------------- | :------------------------------------------------------------------------------------- |
 | **Description**                | Required, string            |
-| **Balance**                    | Required, Integer
+| **InitialAmount**                    | Optional, Integer, default is 0
 |**Currency**  | Optional, must be given in ISO 4217 currency code, if absent euro (EURO) is default |
-| **OwnerID**               | Required, alfanumeric                                                        |
+| **OwnerID**               | Required, alphanumeric                                                        |
 
 
 ## 2.2. Domain Model Excerpt
@@ -45,10 +45,42 @@ All accounts will be created using a single entry DTO. This DTO will have an att
 
 At another point, with more information and user stories regarding accounts, some changes could be made. Another request can come from the client with additional information, for example.
 
-In our service, a DTO to Domain assembler will be used to process received data and create the desired account type. This assembler will use the AccountFactory class, that will abstract the logic behind account creation. 
+In our service, a DTO to Domain assembler will be used to process received data and create the desired account type. The assembler will instantiate the necessary value objects. The balance of an account will be calculated through its list of movements, so a balance attribute will not be necessary on first time creation, but will be obtained from an initial movement. When retrieving the account from persistence, the balance can be directly obtained.
+
+Balance should be updated with every movement made on the account.
 
 ```
-Account account = accountFactory.getAccount(ownerID, balance, description, accountType)
+// AccountData Attributes
+OwnerID ownerID;
+Description description;
+Monetary balance;
+AccountID accountID;
+List<Movement> movements = new ArrayList();
+
+// first time account creation with no balance
+public AccountData(OwnerID ownerID, Description description) {
+...
+}
+
+// first time account creation with given balance
+public AccountData(OwnerID ownerID, Movement movement, Description description) {
+this.balance = movement.getMonetary();
+this.movements.add(movement);
+...
+}
+
+// when retrieving account from persistence (@AllArgsConstructor no fundo)
+public AccountData(OwnerID ownerID, Description description, AccountID accountID, List<Movement> movements, Monetary balance) {
+this.movements = movements;
+this.balance = balance;
+...
+}
+```
+
+This assembler will use the AccountFactory class, that will abstract the logic behind account creation. 
+
+```
+Account account = accountFactory.getAccount(ownerID, initialMovement, description, accountType)
 ```
 
 Account type is a string in the DTO that will be used to create an AccountType object. [This is an Enum class that will be instantiated using a valueOf() method:](https://www.baeldung.com/java-string-to-enum
@@ -68,7 +100,7 @@ Account account;
 
 // if AccountType = "CASH_ACCOUNT", then
 
-Account account = new CashAccount.Builder(ownerID, balance, description).build();
+Account account = new CashAccount.Builder(ownerID, initialMovement, description).build();
 
 ...
 ```
@@ -80,11 +112,14 @@ To handle this, AccountFactory will have two methods with the same name but diff
 The classes that implement the Account interface will have a builder inner class to instantiate objects. The required data for an Account object are OwnerID, Balance and Description. The builder will allow a withAccountID() method to be used as well:
 
 ```
+// first time account creation with exterior data and no balance
+Account account = new CashAccount.Builder(ownerID, description).build();
+
 // first time account creation with exterior data
-Account account = new CashAccount.Builder(ownerID, balance, description).build();
+Account account = new CashAccount.Builder(ownerID, description).withMovement(movement).build();
 
 // account data from persistence
-Account account = new CashAccount.Builder(ownerID, balance, description).withAccountID(accountID).build();
+Account account = new CashAccount.Builder(ownerID, , description).withBalance(balance).withMovements(movements).withAccountID(accountID).build();
 ```
 
 Each class that implements Account should have a builder of its own. This will result in some repeated code, where the only change is the return of the build() method. 
