update to account documentation

--- a/docs/sprint5/user_stories/US170,171,172,173.md
+++ b/docs/sprint5/user_stories/US170,171,172,173.md
@@ -57,24 +57,14 @@ Monetary balance;
 AccountID accountID;
 List<Movement> movements = new ArrayList();
 
-// first time account creation with no balance
-public AccountData(OwnerID ownerID, Description description) {
-...
-}
-
-// first time account creation with given balance
-public AccountData(OwnerID ownerID, Movement movement, Description description) {
-this.balance = movement.getMonetary();
-this.movements.add(movement);
-...
-}
-
-// when retrieving account from persistence (@AllArgsConstructor no fundo)
-public AccountData(OwnerID ownerID, Description description, AccountID accountID, List<Movement> movements, Monetary balance) {
-this.movements = movements;
-this.balance = balance;
-...
-}
+// @AllArgsConstructor + optional movement that will create the balance
+   public AccountData(OwnerID ownerID, Description description, Monetary balance, AccountID accountID, List<Movement> movements, Movement movement) {
+      ...
+      if (balance != null) this.balance = balance;
+      else if (movement != null) this.balance = movement.getMonetary();
+      else this.balance = new Monetary();
+      ...
+   }
 ```
 
 This assembler will use the AccountFactory class, that will abstract the logic behind account creation. 
@@ -107,7 +97,7 @@ Account account = new CashAccount.Builder(ownerID, initialMovement, description)
 
 AccountID generation will be handled by the database. Upon account first time creation, no ID will be used. When saved in the repository, a savedAccount object will be returned that has a generated AccountID value. Subsequent account creation will use this AccountID. This AccountID can also be used in the ResponseEntity of the request as a self link.
 
-To handle this, AccountFactory will have two methods with the same name but different signature, one with and one without AccountID.
+To handle this, AccountFactory will have methods with the same name but different signature, one with only the required data, one with an initial movement and one with all arguments for accounts retrieved from persistence.
 
 The classes that implement the Account interface will have a builder inner class to instantiate objects. The required data for an Account object are OwnerID, Balance and Description. The builder will allow a withAccountID() method to be used as well:
 
@@ -122,13 +112,38 @@ Account account = new CashAccount.Builder(ownerID, description).withMovement(mov
 Account account = new CashAccount.Builder(ownerID, , description).withBalance(balance).withMovements(movements).withAccountID(accountID).build();
 ```
 
-Each class that implements Account should have a builder of its own. This will result in some repeated code, where the only change is the return of the build() method. 
+Each class that implements Account should have a builder of its own. This will result in some repeated code, where the only change is the return of the build() method.
+
+```
+public static class Builder {
+   private OwnerID ownerID
+   private Description description
+   private Monetary balance
+   private AccountID accountID
+   private List<Movement> movements
+   private Movement movement
+   
+   public Builder(OwnerID ownerID, Description description);
+   
+   public Builder withBalance(Monetary balance);
+   public Builder withAccountID(AccountID accountID);
+   public Builder withMovement(Movement movement);
+   public Builder withMovementList(List<Movement> movements);
+   
+   public Account build() {
+      AccountData accountData = new AccountData(this.ownerID, this.description, this.balance, this.accountID, this.movements, this.movement);
+      return new CashAccount(accountData);   
+   }
+}
+```
 
 Another option could be used (mais elegante, mas talvez desnecessário) to avoid this duplication, a [skeletal interface](https://dzone.com/articles/favour-skeletal-interface-in-java).
 
-In this version, the inner class would extend an abstract class that implements account. This abstract class would contain necessary code except for the build() method, different for every class. With this we could also avoid using an AccountData class.
+- In this version, the inner class would extend an abstract class that implements account. This abstract class would contain necessary code except for the build() method, different for every class. With this we could also avoid using an AccountData class.
 
-Regarding handling money in our application, a class that has as attributes monetary value and the associated currency is necessary. For currency we can use the java util class [Currency](https://www.geeksforgeeks.org/java-util-currency-methods-example/). This class allows an instance of currency to be created using a [ISO 4217 currency code](https://en.wikipedia.org/wiki/ISO_4217). The monetary value could be a BigDecimal (recommended) or other options that allow floats.
+**Monetary**
+
+Regarding handling money in our application, a class that has as attributes monetary value and associated currency is necessary. For currency, we can use the java util class [Currency](https://www.geeksforgeeks.org/java-util-currency-methods-example/). This class allows an instance of currency to be created using a [ISO 4217 currency code](https://en.wikipedia.org/wiki/ISO_4217). The monetary value could be a BigDecimal (recommended) or other options that allow floats.
 
 
 
