changes in documentation of US170,171,...

--- a/docs/sprint5/user_stories/US170,171,172,173.md
+++ b/docs/sprint5/user_stories/US170,171,172,173.md
@@ -115,24 +115,38 @@ Account account = new CashAccount.Builder(ownerID, , description).withBalance(ba
 Each class that implements Account should have a builder of its own. This will result in some repeated code, where the only change is the return of the build() method.
 
 ```
-public static class Builder {
-   private OwnerID ownerID
-   private Description description
-   private Monetary balance
-   private AccountID accountID
-   private List<Movement> movements
-   private Movement movement
+public class CashAccount {
+
+   private AccountData data;
    
-   public Builder(OwnerID ownerID, Description description);
+   private CashAccount(AccountData data)  {
+      this.data = data;
+   }
+
+   public static class Builder {
    
-   public Builder withBalance(Monetary balance);
-   public Builder withAccountID(AccountID accountID);
-   public Builder withMovement(Movement movement);
-   public Builder withMovementList(List<Movement> movements);
-   
-   public Account build() {
-      AccountData accountData = new AccountData(this.ownerID, this.description, this.balance, this.accountID, this.movements, this.movement);
-      return new CashAccount(accountData);   
+      private OwnerID ownerID
+      private Description description
+      private AccountID accountID
+      private List<Movement> movements
+      
+      // Indespensavel para criar uma conta válida
+      public Builder(OwnerID ownerID, Description description) {
+      
+      }
+      
+      public Builder withAccountID(AccountID accountID) {}
+      
+      public Builder withMovement(Movement movement) {
+         this.movements.add(movement)   
+      }
+      
+      public Builder withMovementList(List<Movement> movements) {}
+      
+      public Account build() {
+         AccountData accountData = new AccountData(this.ownerID, this.description, this.accountID, this.movements);
+         return new CashAccount(accountData);   
+      }
    }
 }
 ```
@@ -145,7 +159,7 @@ Another option could be used (mais elegante, mas talvez desnecessário) to avoid
 
 Regarding handling money in our application, a class that has as attributes monetary value and associated currency is necessary. For currency, we can use the java util class [Currency](https://www.geeksforgeeks.org/java-util-currency-methods-example/). This class allows an instance of currency to be created using a [ISO 4217 currency code](https://en.wikipedia.org/wiki/ISO_4217). The monetary value could be a BigDecimal (recommended) or other options that allow floats.
 
-
+The request for the creation of an account may have an initialAmount included. In the application, this amount will be converted into a movement.git 
 
 ## 3.2. Class Diagram
 
